--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
          <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Couleurs de l'impressionisme </title>
+        <link rel="stylesheet" href="/src/css/style.css" type="text/css"/>
+        <link rel="icon" href="public/img/icons/logo-expo.svg">
+        <script src='main.js'></script>
+        <script defer src="https://unpkg.com/alpinejs"></script>
     </head>
         <header class="header__nav">
             <div class="header__nav--items">
