--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
             <nav id="mainNav" x-show="menuIs0pen" x-transition.duration.500ms class="menu">  
 
               <h4 class="menu__title">Les artistes et leurs oeuvres </h4>
-                <ul class="menu__nav--articles">
-                    <li> Eugène Boudin
-                  <ul>
-                      <li>Trouville rochers noirs </li>
-                      <li>Deauville le port</li>
-                    </ul>
-                  </li> 
+              <div class="menu__title--decoration"></div>
+                <ul class="menu__liste">
+                    <li class="menu__liste--artistes"> Eugène Boudin </li> 
+                    <li class="menu__liste--artistes"> Claude Monet </li>
+                    <li class="menu__liste--artistes"> Berthe Morisot</li>
+                    <li class="menu__liste--artistes"> Lila Cabot Parry </li>
                </ul> 
+               <div class="menu__title--decoration"></div>
+               <h4 class="menu__title">Qu’est que l’impressionisme ?</h4>
+               <h4 class="menu__title">Billeterie</h4>
            </nav>  
         </header>  
-        <div class="body__"> 
+        <div class="body__info"> 
             <h1> Bienvenue sur le site de notre exposition éphémère !</h1>
             <div></div>
              <h3> Retrouvez ces oeuvres dans notre exposition “Couleurs de l’impressionisme”du 13 avril au 23 juin 2021</h3>
