fichiers redirecte modif menu

--- a/EN/homepage.html
+++ b/EN/homepage.html
@@ -35,7 +35,7 @@
                <h4 class="menu__title">Contact</h4>
            </nav>  
         </header>  
-        <div class="body__infoexpo"> 
+        <div class="body__info"> 
             <h1> Bienvenue sur le site de notre exposition éphémère !</h1>
             <div></div>
              <h3> Retrouvez ces oeuvres dans notre exposition “Couleurs de l’impressionisme”du 13 avril au 23 juin 2021</h3>
@@ -54,19 +54,19 @@
                 <li> Samedi  11h00 - 20h00 </li>
                <li> Fermeture des salles  à 19h45  et 21h45 les mardis.</li>
             </ul>
+        <div> </div>
+        <a> <img src="/public/img/icons/map-pin.svg" alt="map-pin"> </a>
+        <h2> Fondation Cartier, 261 Bd Raspail, 75014 Paris</h2>
+        <div></div>
+        <a> <img src="/public/img/icons/dollar-sign.svg" alt="dollar sign"> </a>
+        <ul>
+            <li>Plein tarif ⇒ 11€</li>
+            <li> Tarif réduit -  7,50€ </li>
+            <li>Réduction 13 -  25 ans -  5€ </li>
+            <li>Fondation Cartier Passs - 18€ - 50€ </li>
+            <li>Moins de 13 ans, Laissez-passer annuel, carte Icom, carte de presse, carte d'invalidité, Fondation Cartier Pass, Etudiants - Gratuit </li>         
+        </ul>
             <div> </div>
-            <a> <img src="/public/img/icons/map-pin.svg" alt="map-pin"> </a>
-            <h2> Fondation Cartier, 261 Bd Raspail, 75014 Paris</h2>
-            <div></div>
-            <a> <img src="/public/img/icons/dollar-sign.svg" alt="dollar sign"> </a>
-            <ul>
-                <li>Plein tarif ⇒ 11€</li>
-                <li> Tarif réduit -  7,50€ </li>
-                <li>Réduction 13 -  25 ans -  5€ </li>
-                <li>Fondation Cartier Passs - 18€ - 50€ </li>
-                <li>Moins de 13 ans, Laissez-passer annuel, carte Icom, carte de presse, carte d'invalidité, Fondation Cartier Pass, Etudiants - Gratuit </li>         
-            </ul>
-              <div> </div>
-         </div>
+        </div>
     </body>
 </html>
