ajout redirect englais et modifs fichier langues

--- a/EN/index.html
+++ b/EN/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" x-data="{menuIs0pen: false}">
+<html lang="en" x-data="{menuIs0pen: false}">
     <head>
         <meta charset="UTF-8">
          <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +7,13 @@
         <title> Couleurs de l'impressionisme </title>
         <link rel="stylesheet" href="/src/css/style.css" type="text/css"/>
         <link rel="icon" href="public/img/icons/logo-expo.svg">
-        <a href="../fr/index.html" onclick="document.cookie = 'nf_lang=fr; path=_redirects /'"></a>
         <script src='main.js'></script>
         <script defer src="https://unpkg.com/alpinejs"></script>
     </head>
     <body>
         <header class="header__nav">
             <div class="header__nav--items">
-               <a href="EN/index.html"> <img src="/public/img/icons/globe.svg" alt="globe" class="header__nav--language"> </a>
+               <a href="../FR/index.html"> <img src="/public/img/icons/globe.svg" alt="globe" class="header__nav--language"> </a>
                <a href="index.html"> <img src="/public/img/Icons/logo-expo.svg" alt= "logo exposition" > </a>
                <button aria-controls="mainNav" @click="menuIs0pen = ! menuIs0pen" class="headerhomepage__btn--menu"> 
                  <img src="/public/img/Icons/menu-burger.svg" alt="menu-burger">
@@ -37,7 +36,7 @@
            </nav>  
         </header>  
         <div class="body__infoexpo"> 
-            <h1> Bienvenue sur le site de notre exposition éphémère !</h1>
+            <h1> Welcome on the website of our exposition !</h1>
             <div></div>
              <h3> Retrouvez ces oeuvres dans notre exposition “Couleurs de l’impressionisme”du 13 avril au 23 juin 2021</h3>
             <a href="#"> Info sur l'impressionisme</a>
