--- a/EN/index.html
+++ b/EN/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
          <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Couleurs de l'impressionisme </title>
+        <title> Colors of impressionism </title>
         <link rel="stylesheet" href="/src/css/style.css" type="text/css"/>
         <link rel="icon" href="public/img/icons/logo-expo.svg">
         <script src='main.js'></script>
