ajout classe première parte homepage presentation

--- a/FR/index.html
+++ b/FR/index.html
@@ -22,29 +22,31 @@
             <nav id="mainNav" x-show="menuIs0pen" x-transition.duration.500ms class="menu">  
 
               <h4 class="menu__title">Les artistes et leurs oeuvres </h4>
-              <div class="menu__title--decoration"></div>
+              <div class="menu__title--separation"></div>
                 <ul class="menu__liste">
                     <li class="menu__liste--artistes"> Eugène Boudin </li> 
                     <li class="menu__liste--artistes"> Claude Monet </li>
                     <li class="menu__liste--artistes"> Berthe Morisot</li>
                     <li class="menu__liste--artistes"> Lila Cabot Parry </li>
                </ul> 
-               <div class="menu__title--decoration"></div>
+               <div class="menu__title--separation"></div>
                <h4 class="menu__title">Qu’est que l’impressionisme ?</h4>
                <h4 class="menu__title">Billeterie</h4>
                <h4 class="menu__title">Contact</h4>
            </nav>  
         </header>  
         <div class="body__infoexpo"> 
-            <h1> Bienvenue sur le site de notre exposition éphémère !</h1>
-            <div></div>
-             <h3> Retrouvez ces oeuvres dans notre exposition “Couleurs de l’impressionisme”du 13 avril au 23 juin 2021</h3>
-            <a href="#"> Info sur l'impressionisme</a>
-            <div></div>
-            <h1> Visite</h1>
-            <a href="#">Billeterie </a>
-             <a> <img src="/public/img/icons/logo_nav_clock.svg" alt="clock"> </a>
-            <ul>
+            <div class="body__presentationexpo"> 
+                 <h1> Bienvenue sur le site de notre exposition éphémère !</h1>
+                    <div class="body__lign--decoration"></div>
+                 <h3> Retrouvez ces oeuvres dans notre exposition “Couleurs de l’impressionisme”du 13 avril au 23 juin 2021</h3>
+                 <a href="#"> Info sur l'impressionisme</a>
+            </div>
+                  <div class="body__lign--decoration"></div>
+                <h1> Visite</h1>
+                <a href="#">Billeterie </a>
+                  <a> <img src="/public/img/icons/logo_nav_clock.svg" alt="clock"> </a>
+             <ul>
                  <li>Dimanche 11h - 20h00 </li>
                 <li> Lundi  Fermé </li>
                 <li> Mardi 11h00 - 22h00</li>
