ajout page partie visite expo homepage

--- a/FR/index.html
+++ b/FR/index.html
@@ -40,35 +40,37 @@
                  <h1> Bienvenue sur le site de notre exposition éphémère !</h1>
                     <div class="body__lign--decoration"></div>
                  <h3> Retrouvez ces oeuvres dans notre exposition “Couleurs de l’impressionisme”du 13 avril au 23 juin 2021</h3>
-                 <a href="#"> Info sur l'impressionisme</a>
+                 <a href="#" class="body__btn"> Qu'est que l'impressionisme ?</a>
             </div>
                   <div class="body__lign--decoration"></div>
+            <div>
                 <h1> Visite</h1>
-                <a href="#">Billeterie </a>
-                  <a> <img src="/public/img/icons/logo_nav_clock.svg" alt="clock"> </a>
-             <ul>
-                 <li>Dimanche 11h - 20h00 </li>
-                <li> Lundi  Fermé </li>
-                <li> Mardi 11h00 - 22h00</li>
-                <li>Mercredi 11h00 - 20h00 </li>
-                <li> Jeudi 11h30 - 20h00 </li>
-                <li>Vendredi 11h00 - 20h00 </li>
-                <li> Samedi  11h00 - 20h00 </li>
-               <li> Fermeture des salles  à 19h45  et 21h45 les mardis.</li>
-            </ul>
-            <div> </div>
-            <a> <img src="/public/img/icons/map-pin.svg" alt="map-pin"> </a>
-            <h2> Fondation Cartier, 261 Bd Raspail, 75014 Paris</h2>
-            <div></div>
-            <a> <img src="/public/img/icons/dollar-sign.svg" alt="dollar sign"> </a>
-            <ul>
-                <li>Plein tarif ⇒ 11€</li>
-                <li> Tarif réduit -  7,50€ </li>
-                <li>Réduction 13 -  25 ans -  5€ </li>
-                <li>Fondation Cartier Passs - 18€ - 50€ </li>
-                <li>Moins de 13 ans, Laissez-passer annuel, carte Icom, carte de presse, carte d'invalidité, Fondation Cartier Pass, Etudiants - Gratuit </li>         
-            </ul>
-              <div> </div>
+                <a href="#" class="body__btn"> Billeterie </a>
+                  <a class="body__icones--visite"><img src="/public/img/icons/logo_nav_clock.svg" alt="clock"> </a>
+                  <ul class="body__liste--visite">
+                    <li>Dimanche 11h - 20h00 </li>
+                    <li> Lundi  Fermé </li>
+                    <li> Mardi 11h00 - 22h00</li>
+                     <li>Mercredi 11h00 - 20h00 </li>
+                    <li> Jeudi 11h30 - 20h00 </li>
+                     <li>Vendredi 11h00 - 20h00 </li>
+                     <li> Samedi  11h00 - 20h00 </li>
+                    <li> Fermeture des salles  à 19h45  et 21h45 les mardis.</li>
+                </ul>
+                <div class="body__lign--blue"> </div>
+                 <a class="body__icones--visite"> <img src="/public/img/icons/map-pin.svg" alt="map-pin"> </a>
+                    <h2> Fondation Cartier, 261 Bd Raspail, 75014 Paris</h2>
+                     <div></div>
+                  <a class="body__icones--visite"> <img src="/public/img/icons/dollar-sign.svg" alt="dollar sign"> </a>
+                 <ul class="body__liste--visite">
+                     <li>Plein tarif ⇒ 11€</li>
+                        <li> Tarif réduit -  7,50€ </li>
+                        <li>Réduction 13 -  25 ans -  5€ </li>
+                        <li>Fondation Cartier Passs - 18€ - 50€ </li>
+                     <li>Moins de 13 ans, Laissez-passer annuel, carte Icom, carte de presse, carte d'invalidité, Fondation Cartier Pass, Etudiants - Gratuit </li>         
+                 </ul>
+                     <div class="body__lign--green"> </div>
+            </div>
          </div>
     </body>
 </html>
