modif lignes décoration

--- a/FR/index.html
+++ b/FR/index.html
@@ -60,7 +60,7 @@
                 <div class="body__lign--blue"> </div>
                  <a class="body__icones--visite"> <img src="/public/img/icons/map-pin.svg" alt="map-pin"> </a>
                     <h3> Fondation Cartier, 261 Bd Raspail, 75014 Paris</h3>
-                     <div></div>
+                     <div class="body__lign--decoration"></div>
                   <a class="body__icones--visite"> <img src="/public/img/icons/dollar-sign.svg" alt="dollar sign"> </a>
                  <ul class="body__liste--visite">
                      <li>Plein tarif ⇒ 11€</li>
