mise en forme boutons homepage

--- a/FR/index.html
+++ b/FR/index.html
@@ -40,7 +40,7 @@
                  <h1> Bienvenue sur le site de notre exposition éphémère !</h1>
                     <div class="body__lign--decoration"></div>
                  <h3> Retrouvez ces oeuvres dans notre exposition “Couleurs de l’impressionisme”du 13 avril au 23 juin 2021</h3>
-                 <a href="#" class="body__btn"> Qu'est que l'impressionisme ?</a>
+                 <a href="#" class="body__btn--mouvement"> Qu'est que l'impressionisme ?</a>
             </div>
                   <div class="body__lign--decoration"></div>
             <div>
