ajout page contact et ajout html foooter

--- a/FR/index.html
+++ b/FR/index.html
@@ -71,6 +71,16 @@
                  </ul>
                      <div class="body__lign--green"> </div>
             </div>
-         </div>
-    </body>
+        </div>
+   </body>
+   <nav>
+    <footer>
+        <p>Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
+        <p>Pour rester au courant de nos actualités, suivez-nous sur</p>
+        <a> <img src="/public/img/icons/youtube.svg" alt="logo youtube"> </a>
+        <a> <img src="/public/img/icons/instagram.svg" alt="logo instagram"> </a>
+        <p> Pour nous contacter</p>
+        <a href="/FR/contact.html"> Contact </a>
+    </footer>
+ </nav>
 </html>
