--- a/EN/index.html
+++ b/EN/index.html
@@ -68,5 +68,21 @@
             </ul>
               <div> </div>
          </div>
+         <nav>
+            <footer>
+                <p>Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
+                <p>Pour rester au courant de nos actualités, suivez-nous sur</p>
+                <a> <img src="/public/img/icons/youtube.svg" alt="logo youtube"> </a>
+                <a> <img src="/public/img/icons/instagram.svg" alt="logo instagram"> </a>
+                <p> Pour nous contacter</p>
+                <a href="#"> Contact </a>
+
+
+
+
+
+
+            </footer>
+         </nav>
     </body>
 </html>
