ajout classes css footer

--- a/FR/index.html
+++ b/FR/index.html
@@ -74,13 +74,15 @@
         </div>
    </body>
    <nav>
-    <footer>
-        <p>Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
-        <p>Pour rester au courant de nos actualités, suivez-nous sur</p>
-        <a> <img src="/public/img/icons/youtube.svg" alt="logo youtube"> </a>
-        <a> <img src="/public/img/icons/instagram.svg" alt="logo instagram"> </a>
+    <footer class="footer__fr">
+        <p class="footer__fr--address">Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
+        <p class="footer__fr--socials">Pour rester au courant de nos actualités, suivez-nous sur</p>
+        <div class="footer__fr--iconsocials"> 
+             <a> <img src="/public/img/icons/youtube.svg" alt="logo youtube"> </a>
+            <a> <img src="/public/img/icons/instagram.svg" alt="logo instagram"> </a>
+        </div>
         <p> Pour nous contacter</p>
-        <a href="/FR/contact.html"> Contact </a>
+        <a href="/FR/contact.html" class="footer__btn--contact"> Contact </a>
     </footer>
  </nav>
 </html>
