modif classes css footer

--- a/FR/index.html
+++ b/FR/index.html
@@ -79,10 +79,12 @@
         <p class="footer__fr--socials">Pour rester au courant de nos actualités, suivez-nous sur</p>
         <div class="footer__fr--iconsocials"> 
              <a> <img src="/public/img/icons/youtube.svg" alt="logo youtube"> </a>
-            <a> <img src="/public/img/icons/instagram.svg" alt="logo instagram"> </a>
+            <a> <img src="/public/img/icons/instagram.svg" alt="logo instagram" class="footer__socials--instagram"> </a>
         </div>
-        <p> Pour nous contacter</p>
-        <a href="/FR/contact.html" class="footer__btn--contact"> Contact </a>
+        <div class="footer__fr--contact">
+             <p> Pour nous contacter</p>
+             <a href="/FR/contact.html" class="footer__btn--contact"> Contact </a>
+       </div>
     </footer>
  </nav>
 </html>
