--- a/FR/index.html
+++ b/FR/index.html
@@ -24,15 +24,15 @@
               <h4 class="menu__title">Les artistes et leurs oeuvres </h4>
               <div class="menu__title--separation"></div>
                 <ul class="menu__liste">
-                    <li class="menu__liste--artistes"> Eugène Boudin </li> 
-                    <li class="menu__liste--artistes"> Claude Monet </li>
-                    <li class="menu__liste--artistes"> Berthe Morisot</li>
-                    <li class="menu__liste--artistes"> Lila Cabot Parry </li>
+                    <li class="menu__liste--artistes"><a href="/FR/eugene-boudin.html"> Eugène Boudin </a> </li> 
+                    <li class="menu__liste--artistes"> <a href="/FR/claude-monet.html"> Claude Monet</a> </li>
+                    <li class="menu__liste--artistes"><a href="/FR/berthe-morisot.html"> Berthe Morisot</a> </li>
+                    <li class="menu__liste--artistes"><a href="/FR/lila-cabot-parry.html"> Lila Cabot Parry </a></li>
                </ul> 
                <div class="menu__title--separation"></div>
-               <h4 class="menu__title">Qu’est que l’impressionisme ?</h4>
-               <h4 class="menu__title">Billeterie</h4>
-               <h4 class="menu__title">Contact</h4>
+               <h4 class="menu__title"> <a href="/FR/info-impressionisme.html"> Qu’est que l’impressionisme ? </a> </h4>
+               <h4 class="menu__title"> <a href="#"> Billeterie </a> </h4>
+               <h4 class="menu__title"> <a href="/FR/contact.html"> Contact </a> </h4>
            </nav>  
         </header>  
         <div class="body__infoexpo"> 
@@ -40,7 +40,7 @@
                  <h1> Bienvenue sur le site de notre exposition éphémère !</h1>
                     <div class="body__lign--decoration"></div>
                  <h3> Retrouvez ces oeuvres dans notre exposition “Couleurs de l’impressionisme”du 13 avril au 23 juin 2021</h3>
-                 <a href="#" class="body__btn--mouvement"> Qu'est que l'impressionisme ?</a>
+                 <a href="/FR/info-impressionisme.html" class="body__btn--mouvement"> Qu'est que l'impressionisme ?</a>
             </div>
                   <div class="body__lign--decoration"></div>
             <div>
