--- a/FR/info-impressionisme.html
+++ b/FR/info-impressionisme.html
@@ -35,11 +35,14 @@
                <h4 class="menu__title"> <a href="/FR/contact.html"> Contact </a> </h4>
            </nav>  
         </header>   
-        <h1> Une introduction à l’impresionnisme</h1> 
-        <div></div>
-        <h2>Qu’est que l’impressionisme ?</h2>
-        <div></div>
-        <div>
+      <div>
+          <div> 
+                <h1> Une introduction à l’impresionnisme</h1> 
+                    <div></div>
+                <h2>Qu’est que l’impressionisme ?</h2>
+                    <div></div>
+          </div>
+          <div
               <p>
                  L’impressionnisme est un mouvement pictural né de l'association d'artistes de la seconde moitié du XIXe siècle vivant en France. 
                  Fortement critiqué à ses débuts, ce mouvement se manifeste notamment de 1874 à 1886 par des expositions publiques à Paris, et marqua la rupture de l'art moderne avec la peinture académique.
@@ -48,13 +51,33 @@
                  L'impressionnisme eut une grande influence sur l'art de cette époque, la peinture bien sûr, mais aussi les arts visuels (sculpture, photographie impressionniste
                  dont le pictorialisme est le relais, cinéma impressionniste), la littérature et la musique.
              </p>
-        </div>
-        <div></div>
-        <h2> Artistes présents dans notre exposition</h2>
-        <div></div>
-        <div> 
-              <a> <img src="/public/img/eugene-boudin.webp" alt="eugène boudin"> </a>
-              <a> <img src="/public/img/claude-monet-1899.webp" alt="claude monet"> </a>
+            </div>
+            <div></div>
+            <h2> Artistes présents dans notre exposition</h2>
+            <div></div>
+            <div> 
+                <figure>
+                    <a> <img src="/public/img/eugene-boudin.webp" alt="eugène boudin"> </a>
+                    <figcaption> <a href="/FR/eugene-boudin.html"> Eugène Boudin </a></figcaption>
+                    <figcaption> 1824 - 1926</figcaption>
+                </figure>
+                <figure> 
+                    <a> <img src="/public/img/claude-monet-1899.webp" alt="claude monet"> </a>
+                    <figcaption> <a href="/FR/claude-monet.html"> Claude Monet</a></figcaption>
+                    <figcaption>1824 - 1926 </figcaption>
+                </figure>
+                <figure>
+                    <a> <img src="/public/img/berthe-morisot.webp" alt="berthe-morisot"> </a>
+                    <figcaption> <a href="/FR/berthe-morisot.html"> Berthe Morisot </a></figcaption>
+                    <figcaption>1841 - 1895 </figcaption>
+                </figure>
+                <figure> 
+                 <a> <img src="/public/img/lila-cabot-parry-1892.webp" alt="lila-cabot-parry"> </a>
+                 <figcaption> <a href="/FR/berthe-morisot.html"> Lila Cabot Parry </a></figcaption>
+                 <figcaption>1848 - 1933</figcaption>
+                </figure>
+           </div>
+
        </div>
     </body>
 
