ajout texte page info impressionisme

--- a/FR/info-impressionisme.html
+++ b/FR/info-impressionisme.html
@@ -55,6 +55,7 @@
             <div></div>
             <h2> Artistes présents dans notre exposition</h2>
             <div></div>
+            <p>Pour en savoir plus sur les artistes,cliquez sur leur noms !</p>
             <div> 
                 <figure>
                     <a> <img src="/public/img/eugene-boudin.webp" alt="eugène boudin"> </a>
