modif page info impressionisme w3c

--- a/FR/info-impressionisme.html
+++ b/FR/info-impressionisme.html
@@ -42,8 +42,8 @@
                 <h2>Qu’est que l’impressionisme ?</h2>
                     <div></div>
           </div>
-          <div
-              <p>
+          <div>
+              <p> 
                  L’impressionnisme est un mouvement pictural né de l'association d'artistes de la seconde moitié du XIXe siècle vivant en France. 
                  Fortement critiqué à ses débuts, ce mouvement se manifeste notamment de 1874 à 1886 par des expositions publiques à Paris, et marqua la rupture de l'art moderne avec la peinture académique.
              </p>
@@ -60,38 +60,40 @@
                 <figure>
                     <a> <img src="/public/img/eugene-boudin.webp" alt="eugène boudin"> </a>
                     <figcaption> <a href="/FR/eugene-boudin.html"> Eugène Boudin </a></figcaption>
-                    <figcaption> 1824 - 1926</figcaption>
                 </figure>
+                <p> 1824 - 1926</p>
+
                 <figure> 
                     <a> <img src="/public/img/claude-monet-1899.webp" alt="claude monet"> </a>
                     <figcaption> <a href="/FR/claude-monet.html"> Claude Monet</a></figcaption>
-                    <figcaption>1824 - 1926 </figcaption>
+                    <p>1824 - 1926 </p>
                 </figure>
                 <figure>
                     <a> <img src="/public/img/berthe-morisot.webp" alt="berthe-morisot"> </a>
                     <figcaption> <a href="/FR/berthe-morisot.html"> Berthe Morisot </a></figcaption>
-                    <figcaption>1841 - 1895 </figcaption>
+                    <p>1841 - 1895 </p>
                 </figure>
                 <figure> 
                  <a> <img src="/public/img/lila-cabot-parry-1892.webp" alt="lila-cabot-parry"> </a>
                  <figcaption> <a href="/FR/berthe-morisot.html"> Lila Cabot Parry </a></figcaption>
-                 <figcaption>1848 - 1933</figcaption>
+                 <p>1848 - 1933</p>
                 </figure>
            </div>
        </div>
-    </body>
-    <nav>
-        <footer class="footer__fr">
-             <p class="footer__fr--address">Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
-              <p class="footer__fr--socials">Pour rester au courant de nos actualités, suivez-nous sur</p>
-             <div class="footer__fr--iconsocials"> 
-                 <a> <img src="/public/img/icons/youtube.svg" alt="logo youtube"> </a>
-                 <a> <img src="/public/img/icons/instagram.svg" alt="logo instagram" class="footer__socials--instagram"> </a>
-             </div>
-             <div class="footer__fr--contact">
-                 <p> Pour nous contacter</p>
-                  <a href="/FR/contact.html" class="footer__btn--contact"> Contact </a>
-             </div>
-         </footer>
-     </nav>
+    
+      <nav>
+         <footer class="footer__fr">
+                <p class="footer__fr--address">Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
+                 <p class="footer__fr--socials">Pour rester au courant de nos actualités, suivez-nous sur</p>
+                 <div class="footer__fr--iconsocials"> 
+                    <a> <img src="/public/img/icons/youtube.svg" alt="logo youtube"> </a>
+                    <a> <img src="/public/img/icons/instagram.svg" alt="logo instagram" class="footer__socials--instagram"> </a>
+                </div>
+                <div class="footer__fr--contact">
+                    <p> Pour nous contacter</p>
+                    <a href="/FR/contact.html" class="footer__btn--contact"> Contact </a>
+                </div>
+         </footer>       
+      </nav>
+</body>
 </html>
