modif texte index

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="body__infoexpo"> 
             <h1> Bienvenue sur le site de notre exposition éphémère !</h1>
             <div></div>
-             <h3> Retrouvez ces oeuvres dans notre exposition “Couleurs de l’impressionisme”du 13 avril au 23 juin 2021</h3>
+             <p> Retrouvez ces oeuvres dans notre exposition “Couleurs de l’impressionisme”du 13 avril au 23 juin 2021</p>
             <a href="#"> Info sur l'impressionisme</a>
             <div></div>
             <h1> Visite</h1>
