ajout pages en anglais

--- a/index.html
+++ b/index.html
@@ -12,63 +12,8 @@
         <script defer src="https://unpkg.com/alpinejs"></script>
     </head>
     <body>
-        <header class="header__nav">
-            <div class="header__nav--items">
-               <a href="EN/index.html"> <img src="/public/img/icons/globe.svg" alt="globe" class="header__nav--language"> </a>
-               <a href="index.html"> <img src="/public/img/Icons/logo-expo.svg" alt= "logo exposition" > </a>
-               <button aria-controls="mainNav" @click="menuIs0pen = ! menuIs0pen" class="headerhomepage__btn--menu"> 
-                 <img src="/public/img/Icons/menu-burger.svg" alt="menu-burger">
-              </button>
-            </div>
-            <nav id="mainNav" x-show="menuIs0pen" x-transition.duration.500ms class="menu">  
-
-              <h4 class="menu__title">Les artistes et leurs oeuvres </h4>
-              <div class="menu__title--decoration"></div>
-                <ul class="menu__liste">
-                    <li class="menu__liste--artistes"> Eugène Boudin </li> 
-                    <li class="menu__liste--artistes"> Claude Monet </li>
-                    <li class="menu__liste--artistes"> Berthe Morisot</li>
-                    <li class="menu__liste--artistes"> Lila Cabot Parry </li>
-               </ul> 
-               <div class="menu__title--decoration"></div>
-               <h4 class="menu__title">Qu’est que l’impressionisme ?</h4>
-               <h4 class="menu__title">Billeterie</h4>
-               <h4 class="menu__title">Contact</h4>
-           </nav>  
-        </header>  
-        <div class="body__infoexpo"> 
-            <h1> Bienvenue sur le site de notre exposition éphémère !</h1>
-            <div></div>
-             <p> Retrouvez ces oeuvres dans notre exposition “Couleurs de l’impressionisme”du 13 avril au 23 juin 2021</p>
-            <a href="#"> Info sur l'impressionisme</a>
-            <div></div>
-            <h1> Visite</h1>
-            <a href="#">Billeterie </a>
-             <a> <img src="/public/img/icons/logo_nav_clock.svg" alt="clock"> </a>
-            <ul>
-                 <li>Dimanche 11h - 20h00 </li>
-                <li> Lundi  Fermé </li>
-                <li> Mardi 11h00 - 22h00</li>
-                <li>Mercredi 11h00 - 20h00 </li>
-                <li> Jeudi 11h30 - 20h00 </li>
-                <li>Vendredi 11h00 - 20h00 </li>
-                <li> Samedi  11h00 - 20h00 </li>
-               <li> Fermeture des salles  à 19h45  et 21h45 les mardis.</li>
-            </ul>
-            <div> </div>
-            <a> <img src="/public/img/icons/map-pin.svg" alt="map-pin"> </a>
-            <h2> Fondation Cartier, 261 Bd Raspail, 75014 Paris</h2>
-            <div></div>
-            <a> <img src="/public/img/icons/dollar-sign.svg" alt="dollar sign"> </a>
-            <ul>
-                <li>Plein tarif ⇒ 11€</li>
-                <li> Tarif réduit -  7,50€ </li>
-                <li>Réduction 13 -  25 ans -  5€ </li>
-                <li>Fondation Cartier Passs - 18€ - 50€ </li>
-                <li>Moins de 13 ans, Laissez-passer annuel, carte Icom, carte de presse, carte d'invalidité, Fondation Cartier Pass, Etudiants - Gratuit </li>         
-            </ul>
-              <div> </div>
-         </div>
-    </body>
-    <nav>
+        <body> 
+            <a href="/FR/index.html">Page d'accueil </a>
+            <a href="/EN/index.html"> Homepage in english </a>
+       </body>
 </html>
