modif liens menu

--- a/FR/index.html
+++ b/FR/index.html
@@ -24,15 +24,15 @@
               <h4 class="menu__title">Les artistes et leurs oeuvres </h4>
               <div class="menu__title--separation"></div>
                 <ul class="menu__liste">
-                    <li class="menu__liste--artistes"><a href="/FR/eugene-boudin.html"> Eugène Boudin </a> </li> 
-                    <li class="menu__liste--artistes"> <a href="/FR/claude-monet.html"> Claude Monet</a> </li>
-                    <li class="menu__liste--artistes"><a href="/FR/berthe-morisot.html"> Berthe Morisot</a> </li>
-                    <li class="menu__liste--artistes"><a href="/FR/lila-cabot-parry.html"> Lila Cabot Parry </a></li>
+                    <li class="menu__liste--artistes"><a href="/FR/eugene-boudin.html" class="menu__artiste--link"> Eugène Boudin </a> </li> 
+                    <li class="menu__liste--artistes"> <a href="/FR/claude-monet.html" class="menu__artiste--link"> Claude Monet</a> </li>
+                    <li class="menu__liste--artistes"><a href="/FR/berthe-morisot.html" class="menu__artiste--link"> Berthe Morisot</a> </li>
+                    <li class="menu__liste--artistes"><a href="/FR/lila-cabot-parry.html" class="menu__artiste--link"> Lila Cabot Parry </a></li>
                </ul> 
                <div class="menu__title--separation"></div>
-               <h4 class="menu__title"> <a href="/FR/info-impressionisme.html"> Qu’est que l’impressionisme ? </a> </h4>
-               <h4 class="menu__title"> <a href="#"> Billeterie </a> </h4>
-               <h4 class="menu__title"> <a href="/FR/contact.html"> Contact </a> </h4>
+               <h4 class="menu__title"> <a href="/FR/info-impressionisme.html" class="menu__info--link"> Qu’est que l’impressionisme ? </a> </h4>
+               <h4 class="menu__title"> <a href="#" class="menu__info--link"> Billeterie </a> </h4>
+               <h4 class="menu__title"> <a href="/FR/contact.html" class="menu__info--link"> Contact </a> </h4>
            </nav>  
         </header>  
         <div class="body__infoexpo"> 
