--- a/FR/index.html
+++ b/FR/index.html
@@ -35,7 +35,7 @@
                <h4 class="menu__title"> <a href="/FR/contact.html" class="menu__info--link"> Contact </a> </h4>
            </nav>  
         </header>  
-        <div class="body__infoexpo"> 
+        <div class="body__content"> 
             <div class="body__presentationexpo"> 
                  <h1> Bienvenue sur le site de notre exposition éphémère !</h1>
                     <div class="body__lign--decoration"></div>
