--- a/FR/info-impressionisme.html
+++ b/FR/info-impressionisme.html
@@ -35,28 +35,28 @@
                <h4 class="menu__title"> <a href="/FR/contact.html"> Contact </a> </h4>
            </nav>  
         </header>   
-      <div>
+      <div class="body__content">
           <div> 
                 <h1> Une introduction à l’impresionnisme</h1> 
-                    <div></div>
+                    <div class="body__lign--brownright"></div>
                 <h2>Qu’est que l’impressionisme ?</h2>
-                    <div></div>
+                    <div class="body__lign--blueleft"></div>
           </div>
-          <div>
-              <p> 
+          <div class="body__content--text">
+              <p class="body__content--paragraph"> 
                  L’impressionnisme est un mouvement pictural né de l'association d'artistes de la seconde moitié du XIXe siècle vivant en France. 
                  Fortement critiqué à ses débuts, ce mouvement se manifeste notamment de 1874 à 1886 par des expositions publiques à Paris, et marqua la rupture de l'art moderne avec la peinture académique.
              </p>
-             <p> 
+             <p class="body__content--paragraph"> 
                  L'impressionnisme eut une grande influence sur l'art de cette époque, la peinture bien sûr, mais aussi les arts visuels (sculpture, photographie impressionniste
                  dont le pictorialisme est le relais, cinéma impressionniste), la littérature et la musique.
              </p>
             </div>
-            <div></div>
+            <div class="body__lign--blueleft"></div>
             <h2> Artistes présents dans notre exposition</h2>
-            <div></div>
+            <div class="body__lign--brownright"></div>
             <p>Pour en savoir plus sur les artistes,cliquez sur leur noms !</p>
-            <div> 
+            <div class="body__freize"> 
                 <figure>
                     <a> <img src="/public/img/eugene-boudin.webp" alt="eugène boudin"> </a>
                     <figcaption> <a href="/FR/eugene-boudin.html"> Eugène Boudin </a></figcaption>
