correction heading css page info mouvement

--- a/FR/info-impressionisme.html
+++ b/FR/info-impressionisme.html
@@ -36,7 +36,7 @@
            </nav>  
         </header>   
       <div class="body__content">
-          <div> 
+          <div class="body__heading"> 
                 <h1> Une introduction à l’impresionnisme</h1> 
                     <div class="body__lign--brownright"></div>
                 <h2>Qu’est que l’impressionisme ?</h2>
