modif  textecss page info impressionisme ajout classe frise

--- a/FR/info-impressionisme.html
+++ b/FR/info-impressionisme.html
@@ -57,11 +57,13 @@
             <div class="body__lign--brownright"></div>
             <p>Pour en savoir plus sur les artistes,cliquez sur leur noms !</p>
             <div class="body__freize"> 
-                <figure>
-                    <a> <img src="/public/img/eugene-boudin.webp" alt="eugène boudin"> </a>
-                    <figcaption> <a href="/FR/eugene-boudin.html"> Eugène Boudin </a></figcaption>
-                </figure>
-                <p> 1824 - 1926</p>
+             <div> 
+                    <figure>
+                        <a> <img src="/public/img/eugene-boudin.webp" alt="eugène boudin"> </a>
+                        <figcaption> <a href="/FR/eugene-boudin.html"> Eugène Boudin </a></figcaption>
+                    </figure>
+                     <p> 1824 - 1926</p>
+             </div>
 
                 <figure> 
                     <a> <img src="/public/img/claude-monet-1899.webp" alt="claude monet"> </a>
