ajout class css page artistes

--- a/FR/eugene-boudin.html
+++ b/FR/eugene-boudin.html
@@ -35,33 +35,34 @@
                <h4 class="menu__title"> <a href="/FR/contact.html"> Contact </a> </h4>
            </nav>  
         </header>   
-      <div>
-          <div> 
+      <div class="body__content">
+          <div class="body__heading"> 
                 <h1> Artistes impressionismes</h1> 
-                    <div></div>
+                    <div class="body__lign--brownright"></div>
                     <h2>Eugène Boudin</h2>
-                    <div></div>
+                <div class="body__lign--blueleft"></div>
+         </div>
                     <figure>
-                        <img src="/public/img/eugene-boudin.webp" alt="eugene-boudin"> 
+                        <img src="/public/img/eugene-boudin.webp" alt="eugene-boudin" class="body__img--artistes"> 
                         <figcaption> Le peintre </figcaption>
                     </figure>
-                    <div></div>
-                <div>
-                    <p>
-                        Eugène-Louis Boudin est un peintre français, né à Honfleur (Calvados) le 12 juillet 1824, mort à Deauville (Calvados) le 8 août 1898. Il fut l'un des premiers peintres français à saisir les paysages à l'extérieur d'un atelier. 
-                        Grand peintre de marines, il est considéré comme l'un des précurseurs de l'impressionnisme.
-                    </p>
-                    <p> En 1844, Eugène Boudin fonde avec un associé sa propre boutique de papetier-encadreur où il expose les œuvres des artistes de passage.</p>      
-                    <p>Il  fait sa première exposition en 1857 à Paris, et la même année il parvient à vendre une vingtaine de ses toiles à l'occasion d'une vente aux enchères au Havre. </p>
-                    <div></div>
+                    <div class="body__lign--greenright"></div>
+                <div class="body__content--text">
+                        <p>
+                             Eugène-Louis Boudin est un peintre français, né à Honfleur (Calvados) le 12 juillet 1824, mort à Deauville (Calvados) le 8 août 1898. Il fut l'un des premiers peintres français à saisir les paysages à l'extérieur d'un atelier. 
+                            Grand peintre de marines, il est considéré comme l'un des précurseurs de l'impressionnisme.
+                        </p>
+                        <p> En 1844, Eugène Boudin fonde avec un associé sa propre boutique de papetier-encadreur où il expose les œuvres des artistes de passage.</p>      
+                        <p>Il  fait sa première exposition en 1857 à Paris, et la même année il parvient à vendre une vingtaine de ses toiles à l'occasion d'une vente aux enchères au Havre. </p>
+                </div>
+                    <div class="body__lign--brownright"></div>
                             <h1>Ses oeuvres présentes dans l’exposition</h1>
                                 <img src="/public/img/deauville-the-harbor-1897-eugene-boudin.webp" alt="Deauville le port">
                                 <a href="#"> En savoir plus</a>
                                 <img src="/public/img/trouville-black-rocks-eugene-boudin.webp" alt="les rochers noirs">
                                 <a href="#"> En savoir plus</a>
-                    <div></div>
+                    <div class="body__lign--greenright" ></div>
                 </div>
-          </div>
      </div>
      </body>
      <nav>
