ajout image carrousel

--- a/FR/index.html
+++ b/FR/index.html
@@ -49,32 +49,50 @@
                          
                             <div id="ecran-1" class="carrousel_ecran">
                                 <figure>
-                                    <img src="https://picsum.photos/seed/1/500/300" alt="image ecran 1">
-                                    <figcaption>Ecran 1</figcaption>
+                                    <img src="/public/img/the-goose-berthe-morisot.webp" alt="l'oie">
+                                    <figcaption> <a>L'oie - Berthe Morisot <</a></figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-2" class="carrousel_ecran">
                                 <figure>
-                                    <img src="https://picsum.photos/seed/2/500/300" alt="image ecran 2">
-                                    <figcaption>Ecran 2</figcaption>
+                                    <img src="/public/img/in-a-japanese-garden-1901.webp" alt="in-a-japanese-garden-1901">
+                                    <figcaption> <a href="#"> Dans un jardin japonais - Berthe Morisot </a> </figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-3" class="carrousel_ecran">
                                 <figure>
-                                    <img src="https://picsum.photos/seed/3/500/300" alt="image ecran 3">
-                                    <figcaption>Ecran 3</figcaption>
+                                    <img src="/public/img/dans-un-bateau-lila-cabot-perry-1907.webp" alt="dans-un-bateau-in-a-boat-1907">
+                                    <figcaption> Dans un bateau - Lila Cabot Perry </figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-4" class="carrousel_ecran">
                                 <figure>
-                                    <img src="https://picsum.photos/seed/4/500/300" alt="image ecran 4">
-                                    <figcaption>Ecran 4</figcaption>
+                                    <img src="/public/img/houses-of-parliamen-claude-monet.webp" alt="houses-of-parliamen-claude-monet">
+                                    <figcaption> Le Parlement - Claude Monet</figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-5" class="carrousel_ecran">
                                 <figure>
-                                    <img src="https://picsum.photos/seed/5/500/300" alt="image ecran 5">
-                                    <figcaption>Ecran 5</figcaption>
+                                    <img src="/public/img/pont-japonais-monet.webp" alt="pont-japonais-monet">
+                                    <figcaption>  Le pont japonais Claude Monet</figcaption>
+                                </figure>
+                            </div>
+                            <div id="ecran-6" class="carrousel_ecran">
+                                <figure>
+                                    <img src="/public/img/the-port-of-nice-berthe-morisot.webp" alt="the-port-of-nice-berthe-morisot">
+                                    <figcaption>  Le port de Nice - Berthe Morisot </figcaption>
+                                </figure>
+                            </div>
+                            <div id="ecran-7" class="carrousel_ecran">
+                                <figure>
+                                    <img src="/public/img/deauville-the-harbor-1897-eugene-boudin.webp" alt="Deauville">
+                                    <figcaption>  Le port de Deauville- Eugène Boudin </figcaption>
+                                </figure>
+                            </div>
+                            <div id="ecran-8" class="carrousel_ecran">
+                                <figure>
+                                    <img src="/public/img/trouville-black-rocks-eugene-boudin.webp" alt="trouville-black-rocks-eugene-boudin">
+                                    <figcaption>  Les rochers noirs de Trouville </figcaption>
                                 </figure>
                             </div>
                         </div>
@@ -87,7 +105,6 @@
                             <li><a href="#ecran-5" :class="{actif:hrefCourant==='#ecran-5'}">ecran 5</a></li>
                         </ul>
                     </div> 
-
 
                  <h3> Retrouvez ces oeuvres dans notre exposition “Couleurs de l’impressionisme”du 13 avril au 23 juin 2021</h3>
                  <a href="/FR/info-impressionisme.html" class="body__btn--mouvement"> Qu'est que l'impressionisme ?</a>
